Fix: small adjustment to align forms on user profile edit page

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -40,3 +40,11 @@ section.profile {
     background-color: $light-gray;
   }
 }
+
+section.reset-password {
+  .layout {
+    h3 {
+      margin-left: 15px;
+    }
+  }
+}
